--- a/index.html
+++ b/index.html
@@ -1,135 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <meta charset="utf-8">
-    <title>Hoja de Vida - Josue Cespedes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilo.css">
+    <title>Comenzando con la Fotografia | Inicio</title>
   </head>
   <body>
+    <div class="contenido">
     <header>
-      <svg
-         xmlns:dc="http://purl.org/dc/elements/1.1/"
-         xmlns:cc="http://creativecommons.org/ns#"
-         xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-         xmlns:svg="http://www.w3.org/2000/svg"
-         xmlns="http://www.w3.org/2000/svg"
-         xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-         xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
-         width="34.337776mm"
-         height="34.337776mm"
-         viewBox="0 0 34.337776 34.337776"
-         version="1.1"
-         id="svg8"
-         inkscape:version="0.92.2 5c3e80d, 2017-08-06"
-         sodipodi:docname="logo.svg">
-        <defs
-           id="defs2">
-          <inkscape:perspective
-             sodipodi:type="inkscape:persp3d"
-             inkscape:vp_x="0 : 148.49999 : 1"
-             inkscape:vp_y="0 : 999.99991 : 0"
-             inkscape:vp_z="209.99999 : 148.49998 : 1"
-             inkscape:persp3d-origin="105 : 98.999992 : 1"
-             id="perspective4526" />
-        </defs>
-        <sodipodi:namedview
-           id="base"
-           pagecolor="#ffffff"
-           bordercolor="#666666"
-           borderopacity="1.0"
-           inkscape:pageopacity="0.0"
-           inkscape:pageshadow="2"
-           inkscape:zoom="0.59270053"
-           inkscape:cx="655.40565"
-           inkscape:cy="-55.874124"
-           inkscape:document-units="mm"
-           inkscape:current-layer="layer1"
-           showgrid="false"
-           inkscape:window-width="2048"
-           inkscape:window-height="1025"
-           inkscape:window-x="0"
-           inkscape:window-y="1"
-           inkscape:window-maximized="1" />
-        <metadata
-           id="metadata5">
-          <rdf:RDF>
-            <cc:Work
-               rdf:about="">
-              <dc:format>image/svg+xml</dc:format>
-              <dc:type
-                 rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
-              <dc:title />
-            </cc:Work>
-          </rdf:RDF>
-        </metadata>
-        <g
-           inkscape:label="Capa 1"
-           inkscape:groupmode="layer"
-           id="layer1"
-           transform="translate(-76.798946,-101.0467)">
-          <text
-             xml:space="preserve"
-             style="font-style:normal;font-weight:normal;font-size:7.1795392px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;fill:#005597;fill-opacity:1;stroke:none;stroke-width:0.84102982;stroke-miterlimit:4;stroke-dasharray:none"
-             x="86.167534"
-             y="123.984"
-             id="text3701"
-             transform="scale(1.0201311,0.98026616)"><tspan
-               sodipodi:role="line"
-               id="tspan3699"
-               x="86.167534"
-               y="123.984"
-               style="font-size:17.20840454px;fill:#005597;fill-opacity:1;stroke:#005597;stroke-width:0.84102982;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1">J</tspan></text>
-          <path
-             style="stroke-width:1.68719268"
-             d=""
-             id="path3709"
-             inkscape:connector-curvature="0"
-             transform="scale(0.26458333)" />
-          <text
-             xml:space="preserve"
-             style="font-style:normal;font-weight:normal;font-size:17.3567524px;line-height:1.25;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;fill:#005597;fill-opacity:1;stroke:none;stroke-width:0.84102982;stroke-miterlimit:4;stroke-dasharray:none"
-             x="90.599442"
-             y="126.00592"
-             id="text4524"><tspan
-               sodipodi:role="line"
-               id="tspan4522"
-               x="90.599442"
-               y="126.00592"
-               style="font-size:17.3567543px;fill:#005597;fill-opacity:1;stroke:#005597;stroke-width:0.84102982;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1">C</tspan></text>
-          <circle
-             style="fill:#000000;fill-opacity:0;stroke:#005597;stroke-width:3.36411929;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-             id="path4542"
-             cx="93.967834"
-             cy="118.21558"
-             r="15.486829" />
-        </g>
-      </svg>
-      <h1>Hoja de Vida</h1>
-      <h2>Josue Cespedes</h2>
-      <h3>10 de marzo de 1993</h3>
-      <h3>Santo Domingo, República Dominicana</h3>
-      <a href="index.html">Inicio</a>
-      <a href="educacion.html">Educación</a>
-      <a href="experiencia.html">Experiencia</a>
+      <h1>Comenzando con la fotografia</h1>
+      <nav class="menu">
+        <ul>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="paisajes.html">Paisajes</a></li>
+          <li><a href="retratos.html">Retratos</a></li>
+        </ul>
+      </nav>
     </header>
-    <section>
-    <h2>Información Personal</h2>
-    <article>
-    <img src="images/foto.jpeg" alt="Josue Cespedes" width="300">
-    <p>Soñador, Actor, Loco Enamorado de la Programación, Estudiante de Publiciad. Me describo como una persona que ha comprendido que en la vida no hay caminos, se hace camino al andar.</p>
-    <h2>Idiomas</h2>
-    <ul>
-      <li>Español <strong> <em>Avanzado</em></strong></li>
-      <li>Inglés<strong> <em>Intermmedio</em></strong></li>
-    </ul>
-    </article>
+    <section class="bannerimg">
+      <picture>
+        <source media="(min-width: 768px)" srcset="images/paisaje1.jpg">
+        <source media="(min-width: 480px)" srcset="images/paisaje1_2.jpg">
+        <img src="images/paisaje1_2.jpg">
+      </picture>
+    </section>    
+    <section class="imgscolumn">
+      <article class="imagenes">
+        <img id="paisaje" src="images/articulo_paisaje1.jpg" alt="" width="380">
+        <p>Paisajes</p>
+      </article>
+      <article class="imagenes">
+        <img id="retrato" src="images/articulo_retrato1.jpg" alt="" width="380">
+        <p>Retratos</p>
+      </article>
     </section>
     <footer>
-      <h2>Contacto</h2>
-      <a href="mailto:josuecss@yahoo.com?subject=Contacto"><img src="images/email.png" alt="Contactar por Correo"></a>
-      <a href="https://facebook.com/josuec.io" target="_blank"><img src="images/facebook.png"alt="Entra a mi Facebook"></a>
-      <a href="https://www.instagram.com/josuec.io" target="_blank"><img src="images/instagram.png"alt="Entra a mi Instagram"></a>
-      <a href="https://twitter.com/josue_cespedes" target="_blank"><img src="images/twitter.png"alt="Entra a mi Twitter"></a>
-      <a href="https://github.com/eloneoemo" target="_blank"><img src="images/github.png"alt="Entra a mi Git Hub"></a>
+      <div class="footer">
+        <div class="contacto">
+          <h1>Contacto</h1>
+          <a href="mailto:josuecss@yahoo.com?subject=Contacto" "Escríbema">josuecss@yahoo.com</a><br>
+          Calle 5 con 3 <br>
+          Telefono 809-989-0010</p>
+        </div>
+        <div class="politicas">
+          <h1>Términos</h1>
+          <p>Conoce Nuestros Terminos y Condiciones</p>
+        </div>
+        <div class="redes-sociales">
+          <h1>Redes Sociales</h1>
+          <p>Comparte en nuestras Redes Sociales</p>
+          <a href="https://facebook.com/josuec.io" target="_blank"><img src="images/facebook.png"alt="Entra a mi Facebook"> Comenzando Fotografía</a>
+          <a href="https://www.instagram.com/josuec.io" target="_blank"><img src="images/instagram.png"alt="Entra a mi Instagram"> @ComenzandoFotografia</a>
+        </div>
+        <div class="copyright">
+          <h1>Derechos</h1>
+          <p>Josue Cespedes © 2019</p>
+        </div>
+      </div>
     </footer>
+    </div>
   </body>
 </html>
